<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ LaaNo Android application
  ~
  ~ @author Aleksandr Borisenko <developer@laano.net>
  ~ Copyright (C) 2017 Aleksandr Borisenko
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable name="viewModel"
            type="com.bytesforge.linkasanote.addeditaccount.nextcloud.NextcloudViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        bind:layoutEnabled="@{viewModel.layoutEnabled}">

        <LinearLayout
            android:id="@+id/snackbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/screen_edge_padding"
            bind:snackbarId="@{viewModel.snackbarId}">

            <TextView
                android:id="@+id/application_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_edit_account_logo_margin_top"
                android:text="@string/app_name_full"
                android:textSize="@dimen/add_edit_account_title_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/add_edit_account_description_padding"
                android:paddingBottom="@dimen/add_edit_account_description_padding"
                android:text="@string/add_edit_account_nextcloud_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/server_url"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/minimum_clickable_height"
                        android:afterTextChanged="@{() -> viewModel.afterServerUrlChanged(serverUrl)}"
                        android:autofillHints="url"
                        android:enabled="@{viewModel.serverUrl}"
                        android:hint="@string/add_edit_account_nextcloud_url_hint"
                        android:inputType="textUri"
                        android:onFocusChange="@{viewModel::onServerUrlFocusChange}"
                        android:text="@={viewModel.serverUrlText}"
                        bind:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/host_url_refresh_button"
                    android:layout_width="@dimen/minimum_clickable_width"
                    android:layout_height="@dimen/minimum_clickable_height"
                    android:layout_gravity="bottom|end"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/add_edit_account_nextcloud_url_refresh_description"
                    android:visibility="@{viewModel.refreshButton ? View.VISIBLE : View.GONE}"
                    android:onClick="@{() -> viewModel.onRefreshButtonClick()}"
                    app:srcCompat="@drawable/ic_refresh" />
            </LinearLayout>

            <TextView
                android:id="@+id/server_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.serverStatusText}"
                android:gravity="center_vertical"
                android:minHeight="@dimen/add_edit_account_status_min_height"
                android:layout_marginBottom="@dimen/add_edit_account_url_form_space"
                android:drawablePadding="@dimen/add_edit_account_status_icon_padding"
                android:visibility="@{viewModel.serverStatus ? View.VISIBLE : View.GONE}"
                android:tag="@{viewModel.serverStatusIcon}"
                app:drawableStartCompat="@{viewModel.serverStatusIcon}" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/minimum_clickable_height"
                    android:afterTextChanged="@{() -> viewModel.afterAccountCredentialsChanged()}"
                    android:autofillHints="username"
                    android:enabled="@{viewModel.accountUsername}"
                    android:hint="@string/add_edit_account_nextcloud_username_hint"
                    android:inputType="textNoSuggestions"
                    android:text="@={viewModel.accountUsernameText}"
                    bind:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/account_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/minimum_clickable_height"
                    android:afterTextChanged="@{() -> viewModel.afterAccountCredentialsChanged()}"
                    android:autofillHints="password"
                    android:hint="@string/add_edit_account_nextcloud_password_hint"
                    android:inputType="textPassword"
                    android:text="@={viewModel.accountPasswordText}"
                    bind:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/auth_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@{viewModel.authStatusText}"
                android:minHeight="@dimen/add_edit_account_status_min_height"
                android:drawablePadding="@dimen/add_edit_account_status_icon_padding"
                android:visibility="@{viewModel.authStatus ? View.VISIBLE : View.GONE}"
                android:tag="@{viewModel.authStatusIcon}"
                app:drawableStartCompat="@{viewModel.authStatusIcon}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_edit_account_nextcloud_login_button"
                android:padding="@dimen/main_button_padding"
                android:layout_marginTop="@dimen/main_button_margin_vertical"
                android:enabled="@{viewModel.loginButton}"
                android:onClick="@{() -> viewModel.onLoginButtonClick()}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/about_nextcloud_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onAboutNextcloudClick()}"
                    android:text="@string/add_edit_account_nextcloud_about"
                    android:textColor="@color/about_nextcloud_button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
