...
    <string name="add_edit_account_nextcloud_server_status_testing">Testing connection…</string>
    <string name="add_edit_account_nextcloud_username_hint">Username</string>
    <string name="add_edit_account_nextcloud_password_hint">Password</string>
    <string name="add_edit_account_nextcloud_login_button">Connect</string>
    <string name="add_edit_account_nextcloud_about">About Nextcloud</string>
    <string name="add_edit_account_nextcloud_auth_status_checking">Checking credentials…</string>
    <string name="add_edit_account_nextcloud_warning_empty_url">A server URL must be specified</string>
    <string name="add_edit_account_nextcloud_info_normalized_url">The server URL has been normalized</string>
    <string name="add_edit_account_nextcloud_warning_malformed_url">The URL is not formatted correctly</string>
    <string name="add_edit_account_nextcloud_warning_waiting_for_service">The service is not ready yet. Waiting…</string>
    <string name="add_edit_account_nextcloud_connection_secure">Secure connection is established</string>
    <string name="add_edit_account_nextcloud_connection_established">Connection is established</string>
    <string name="add_edit_account_nextcloud_connection_unsecure">Secure connection is unavailable</string>
    <string name="add_edit_account_nextcloud_connection_no_network">No network connection</string>
    <string name="add_edit_account_nextcloud_connection_problem">Couldn\'t establish a connection</string>
    <string name="add_edit_account_nextcloud_server_unrecognized">Unrecognized server version or configuration</string>
    <string name="add_edit_account_nextcloud_ssl_problem">SSL initialization failed</string>
...
